add check email status
