# public/swagger.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.0",
   "info": {
     "title": "PHP Mailer",
-    "description": "This API is to send mail",
+    "description": "This API is to send and check mail",
     "contact": {
       "email": "isalriz9@gmail.com"
     },
@@ -94,11 +94,68 @@
                     "message": {
                       "type": "string",
                       "example": "Email sending on process"
+                    },
+                    "email_id": {
+                      "type": "string",
+                      "example": "uuid-1234-5678-91011"
                     }
                   }
                 }
               }
             }
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/emails/check-status": {
+      "post": {
+        "tags": [
+          "Mail Module"
+        ],
+        "summary": "Check Email Status",
+        "description": "Retrieves the status of an email using the provided email ID.",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email_id": {
+                    "type": "string",
+                    "example": "uuid-1234-5678-91011"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Email status retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "sent"
+                    },
+                    "remarks": {
+                      "type": "string",
+                      "example": "Email successfully sent"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid email ID or request"
           },
           "500": {
             "description": "Server error"
